--- a/bankaggregator/bankaggregator/src/main/resources/application.properties
+++ b/bankaggregator/bankaggregator/src/main/resources/application.properties
@@ -5,4 +5,9 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.cloud.vault.uri=http://127.0.0.1:8200
+spring.cloud.vault.token=${VAULT_TOKEN}
+spring.cloud.vault.kv.enabled=true
+spring.cloud.vault.kv.backend=secret
+spring.cloud.vault.kv.application-name=bank-aggregator
 
