fixed dependecy problem

--- a/bankaggregator/bankaggregator/pom.xml
+++ b/bankaggregator/bankaggregator/pom.xml
@@ -5,8 +5,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.6</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>3.1.4</version>
+		<relativePath/>
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>bankaggregator</artifactId>
@@ -67,7 +67,7 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>5.5.0</version> <!-- Usa la última versión disponible -->
+			<version>5.5.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -79,11 +79,11 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-vault-config</artifactId>
+			<version>4.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.vault</groupId>
 			<artifactId>spring-vault-core</artifactId>
-			<version>2.3.1</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
