--- a/bankaggregator/bankaggregator/src/main/resources/application.properties
+++ b/bankaggregator/bankaggregator/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=bankaggregator
+spring.application.name=bank-aggregator
 spring.datasource.url=jdbc:mysql://localhost:3306/bankdb?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
